...
                    text = user.email,
                    color = Color.Black,
                    fontSize = 14.sp
                )
            }
            IconButton(
                modifier = Modifier.testTag("user_button"),
                onClick = { onClick(user.id) },
            ) {
                Icon(
                    imageVector = Icons.Outlined.PlayArrow,
                    "",
                    tint = Color.Black
...
