...
                    .background(color = Color.Black)
                    .padding(16.dp),
                contentAlignment = Alignment.Center
            ) {
                Text(text = "Error: ${state.result.error.message}")
                TextButton(
                    modifier = Modifier.testTag("back_to_home"),
                    onClick = onBack
                ) {
                    Text(text = "Back")
                }
            }
        }
...
